[package]
name = "fuzzy_search_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Flutter Plugin System"]
description = "Production-grade fuzzy file search WASM plugin demonstrating Clean Architecture"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Fuzzy matching (fuzzy-matcher - fast fuzzy matching library)
# Uses Sublime Text algorithms, 50-100x faster than Dart alternatives
fuzzy-matcher = "0.3"

# Serialization for WASM communication
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for binary serialization

[profile.release]
opt-level = "z"     # Optimize for size (WASM binary)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip debug symbols

[profile.dev]
opt-level = 0
