[package]
name = "markdown_renderer_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Flutter Plugin System"]
description = "Production-grade Markdown renderer WASM plugin demonstrating Clean Architecture"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Markdown parsing (pure Rust, no C dependencies)
# pulldown-cmark is the industry-standard Markdown parser for Rust
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Serialization for WASM communication
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for binary serialization

[profile.release]
opt-level = "z"     # Optimize for size (WASM binary)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip debug symbols

[profile.dev]
opt-level = 0
